Pass each new todo has a url, which returns a todo

--- a/manifest.yml
+++ b/manifest.yml
@@ -8,36 +8,42 @@ packages:
         web-export: true
         inputs:
           cloudanturl: ${CLOUDANT_URL}
+          ibmcloudhost: ${IBMCLOUD_HOST}
       todos_readall:
         function: resources/todos/readall/todos-readall-bin.zip
         runtime: go:1.11
         web-export: true
         inputs:
           cloudanturl: ${CLOUDANT_URL}
+          ibmcloudhost: ${IBMCLOUD_HOST}
       todos_read:
         function: resources/todos/read/todos-read-bin.zip
         runtime: go:1.11
         web-export: true
         inputs:
           cloudanturl: ${CLOUDANT_URL}
+          ibmcloudhost: ${IBMCLOUD_HOST}
       todos_update:
         function: resources/todos/update/todos-update-bin.zip
         runtime: go:1.11
         web-export: true
         inputs:
           cloudanturl: ${CLOUDANT_URL}
+          ibmcloudhost: ${IBMCLOUD_HOST}
       todos_delete:
         function: resources/todos/delete/todos-delete-bin.zip
         runtime: go:1.11
         web-export: true
         inputs:
           cloudanturl: ${CLOUDANT_URL}
+          ibmcloudhost: ${IBMCLOUD_HOST}
       todos_deleteall:
         function: resources/todos/deleteall/todos-deleteall-bin.zip
         runtime: go:1.11
         web-export: true
         inputs:
           cloudanturl: ${CLOUDANT_URL}
+          ibmcloudhost: ${IBMCLOUD_HOST}
     apis:
       todos:
         api:
