Pass changes to a todo are persisted

--- a/manifest.yml
+++ b/manifest.yml
@@ -55,7 +55,7 @@ packages:
               method: DELETE
               response: http
             todos_update:
-              method: PUT
+              method: PATCH
               response: http
           todos:
             todos_readall:
